Updated Site Pending Review

--- a/css/customcss.css
+++ b/css/customcss.css
@@ -1,7 +1,10 @@
 img.card-img-top {
-    min-height: 220px !important;;
+    min-height: 220px !important;
     max-height: 220px !important;
 }
+
+
+
 .max-wd-150 {max-width: 150px;}
 
 .home-bg{
